--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,9 @@
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "predis/predis": "^1.1",
-        "socialiteproviders/weixin": "^4.0",
-        "socialiteproviders/weixin-web": "^3.0"
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
