--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ yarn-error.log
 .idea/
 storage/logs/
 public/uploads/
+storage/framework/sessions/
+storage/framework/view/
+storage/framework/cache/
