--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "askedio/laravel-soft-cascade": "^5.7",
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
+        "laravel-admin-ext/log-viewer": "^1.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
