--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+      "arrowjustdoit/crontab": "^1.0",
         "askedio/laravel-soft-cascade": "^5.7",
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
