--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "arrowjustdoit/crontab": "^1.0",
         "askedio/laravel-soft-cascade": "^6.0",
         "encore/laravel-admin": "^1.7",
@@ -16,17 +16,18 @@
         "ichynul/iframe-tabs": "^1.3",
         "laravel-admin-ext/log-viewer": "^1.0",
         "laravel/framework": "6.0.*",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1"
     },
     "require-dev": {
+        "facade/ignition": "^1.4",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
