--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "encore/laravel-admin": "^1.7",
         "fideloper/proxy": "^4.0",
         "ichynul/iframe-tabs": "^1.3",
+      "laravel-admin-ext/helpers": "^1.2",
         "laravel-admin-ext/log-viewer": "^1.0",
         "laravel/framework": "6.0.*",
         "laravel/tinker": "^2.0",
