--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ichynul/iframe-tabs": "^1.3",
       "laravel-admin-ext/helpers": "^1.2",
         "laravel-admin-ext/log-viewer": "^1.0",
+      "laravel-admin-ext/redis-manager": "^1.3",
         "laravel/framework": "6.0.*",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
