--- a/composer.json
+++ b/composer.json
@@ -1,81 +1,81 @@
 {
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": "^7.2",
-        "arrowjustdoit/crontab": "^1.0",
-        "askedio/laravel-soft-cascade": "^6.0",
-        "encore/laravel-admin": "^1.7",
-        "fideloper/proxy": "^4.0",
-        "ichynul/iframe-tabs": "^1.3",
-      "laravel-admin-ext/helpers": "^1.2",
-        "laravel-admin-ext/log-viewer": "^1.0",
-      "laravel-admin-ext/redis-manager": "^1.3",
-        "laravel/framework": "6.0.*",
-        "laravel/tinker": "^2.0",
-        "maatwebsite/excel": "^3.1",
-        "predis/predis": "^1.1"
-    },
-    "require-dev": {
-        "facade/ignition": "^1.4",
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
-        "files": [
-            "app/helpers.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
-    },
-    "repositories": {
-        "packagist": {
-            "type": "composer",
-            "url": "https://mirrors.aliyun.com/composer/"
-        }
+  "name": "laravel/laravel",
+  "type": "project",
+  "description": "The Laravel Framework.",
+  "keywords": [
+    "framework",
+    "laravel"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": "^7.2",
+    "arrowjustdoit/crontab": "^1.0",
+    "askedio/laravel-soft-cascade": "^6.0",
+    "encore/laravel-admin": "^1.7",
+    "fideloper/proxy": "^4.0",
+    "ichynul/iframe-tabs": "1.3.4",
+    "laravel-admin-ext/helpers": "^1.2",
+    "laravel-admin-ext/log-viewer": "^1.0",
+    "laravel-admin-ext/redis-manager": "^1.3",
+    "laravel/framework": "6.0.*",
+    "laravel/tinker": "^2.0",
+    "maatwebsite/excel": "^3.1",
+    "predis/predis": "^1.1"
+  },
+  "require-dev": {
+    "facade/ignition": "^1.4",
+    "beyondcode/laravel-dump-server": "^1.0",
+    "filp/whoops": "^2.0",
+    "fzaninotto/faker": "^1.4",
+    "mockery/mockery": "^1.0",
+    "nunomaduro/collision": "^3.0",
+    "phpunit/phpunit": "^8.0"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
     }
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    },
+    "classmap": [
+      "database/seeds",
+      "database/factories"
+    ],
+    "files": [
+      "app/helpers.php"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi"
+    ]
+  },
+  "repositories": {
+    "packagist": {
+      "type": "composer",
+      "url": "https://mirrors.aliyun.com/composer/"
+    }
+  }
 }
