--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "php": "^7.2",
     "arrowjustdoit/crontab": "^1.0",
     "askedio/laravel-soft-cascade": "^6.0",
-    "encore/laravel-admin": "^1.7",
+    "encore/laravel-admin": "1.8.10",
     "fideloper/proxy": "^4.0",
     "ichynul/iframe-tabs": "1.3.4",
     "laravel-admin-ext/helpers": "^1.2",
